--- a/Problems/1000.md
+++ b/Problems/1000.md
@@ -31,7 +31,7 @@ Hello World!
 
 ## Solution
 
-In this first problem all you have to do is print this message on the screen.
+In this first problem all you have to do is print the message `Hello World!` on the screen.
 
 ## Key Points
 
