--- a/Problems/1000.md
+++ b/Problems/1000.md
@@ -13,10 +13,10 @@ In this first problem all you have to do is print this message on the screen.
 ```
 
 Input
-This problem has no input.
+`This problem has no input.`
 
 Output
-You must print the message Hello World! and then the endline as shown below.
+`You must print the message Hello World! and then the endline as shown below.`
 
 Input sample
 ```
