--- a/Problems/1189.md
+++ b/Problems/1189.md
@@ -1,3 +1,73 @@
+## Problem
+
+https://www.beecrowd.com.br/judge/en/problems/view/1189
+
+## Problem Description
+
+beecrowd | 1189
+Left Area
+By Neilor Tonin, URI Brazil
+
+Read an uppercase character that indicates an operation that will be performed in an array `M[12][12]`. Then, calculate and print the sum or average considering only the numbers that are included in the green area of this array, as shown in the following figure:
+
+![](https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1189.png)
+
+## Input
+
+The first line of the input contains a single uppercase character `O` (`'S'` or `'M'`), indicating the operation Sum or Average (Média in Portuguese) to be performed with the elements of the array. Following are 144 floating-point numbers of the array.
+
+## Output
+
+Print the calculated result (sum or average) with one digit after the decimal point.
+
+## Input Sample
+
+```
+S
+5.0
+130.0
+-3.5
+2.5
+4.1
+...
+```
+
+## Output Sample
+
+```
+122.2
+```
+
+## Solution
+
+To solve this problem, we will use a double loop to traverse the elements in the green area of the given 12x12 array `M`. The green area consists of elements where the column index `j` is smaller than `i`, and `j` is also smaller than `11 - i`.
+
+We will maintain a variable `sum` to accumulate the sum of these elements. We will iterate over the first five rows of the array (indexed from 0 to 4) and, within each row, iterate over the columns from `j + 1` to `11 - j - 1`. During these iterations, we will add the value of `M[i, j]` to the `sum`.
+
+After completing the double loop, we will have the sum of all the elements in the green area. If the given operation is 'S', we will simply print the sum with one digit after the decimal point. If the operation is 'M', we will divide the sum by 30 (as there are 30 elements in the green area) and then print the result with one digit after the decimal point.
+
+
+## Key Points
+
+
+1. The green area of the 12x12 array consists of elements where the column index `j` is smaller than `i`, and `j` is also smaller than `11 - i`.
+
+2. The solution uses a double loop to traverse the elements in the green area. The outer loop iterates over the first five rows (indexed from 0 to 4), and within each row, the inner loop iterates over the columns from `j + 1` to `11 - j - 1`.
+
+3. During the loop iterations, the solution calculates the sum of the elements in the green area and stores it in the variable `sum`.
+
+4. If the given operation is 'S', the solution simply prints the sum of the elements with one digit after the decimal point.
+
+5. If the given operation is 'M', the solution divides the sum by 30 (as there are 30 elements in the green area) and then prints the average with one digit after the decimal point.
+
+6. The solution uses the `CultureInfo` class to ensure that the decimal separator is a dot ('.') in the printed output.
+
+## Code
+
+- Support Language: C#
+
+**C# Code:**
+
 ```csharp
 using System;
 using System.Globalization;
@@ -29,3 +99,8 @@ namespace Beecrowd
     }
 }
 ```
+
+You can visit my Beecrowd profile: https://www.beecrowd.com.br/judge/en/users/statistics/473113
+
+If you have any comments on this, please leave me a message to the email: albert159357555@hotmail.com. 
+I will check the answers one by one when I have time.
