--- a/Problems/1189.md
+++ b/Problems/1189.md
@@ -4,13 +4,20 @@ https://www.beecrowd.com.br/judge/en/problems/view/1189
 
 ## Problem Description
 
-beecrowd | 1189
-Left Area
-By Neilor Tonin, URI Brazil
+<div align="center">
+
+###### beecrowd | 1189
+### Left Area
+###### By Neilor Tonin, URI <img src="https://resources.beecrowd.com.br/gallery/images/flags/br.gif" alt="Brazil Flag" /> Brazil
+**Timelimit: 1**
+
+</div>
 
 Read an uppercase character that indicates an operation that will be performed in an array `M[12][12]`. Then, calculate and print the sum or average considering only the numbers that are included in the green area of this array, as shown in the following figure:
 
-![](https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1189.png)
+<p align="center">
+  <img src="https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1189.png" alt="Green Area of Array" />
+</p>
 
 ## Input
 
@@ -49,18 +56,12 @@ After completing the double loop, we will have the sum of all the elements in th
 
 ## Key Points
 
-
-1. The green area of the 12x12 array consists of elements where the column index `j` is smaller than `i`, and `j` is also smaller than `11 - i`.
-
-2. The solution uses a double loop to traverse the elements in the green area. The outer loop iterates over the first five rows (indexed from 0 to 4), and within each row, the inner loop iterates over the columns from `j + 1` to `11 - j - 1`.
-
-3. During the loop iterations, the solution calculates the sum of the elements in the green area and stores it in the variable `sum`.
-
-4. If the given operation is 'S', the solution simply prints the sum of the elements with one digit after the decimal point.
-
-5. If the given operation is 'M', the solution divides the sum by 30 (as there are 30 elements in the green area) and then prints the average with one digit after the decimal point.
-
-6. The solution uses the `CultureInfo` class to ensure that the decimal separator is a dot ('.') in the printed output.
+- The green area of the 12x12 array consists of elements where the column index `j` is smaller than `i`, and `j` is also smaller than `11 - i`.
+- The solution uses a double loop to traverse the elements in the green area. The outer loop iterates over the first five rows (indexed from 0 to 4), and within each row, the inner loop iterates over the columns from `j + 1` to `11 - j - 1`.
+- During the loop iterations, the solution calculates the sum of the elements in the green area and stores it in the variable `sum`.
+- If the given operation is 'S', the solution simply prints the sum of the elements with one digit after the decimal point.
+- If the given operation is 'M', the solution divides the sum by 30 (as there are 30 elements in the green area) and then prints the average with one digit after the decimal point.
+- The solution uses the `CultureInfo` class to ensure that the decimal separator is a dot ('.') in the printed output.
 
 ## Code
 
