--- a/Problems/1000.md
+++ b/Problems/1000.md
@@ -4,30 +4,42 @@ https://www.beecrowd.com.br/judge/en/problems/view/1000
 
 ## Problem Description
 
-![](https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1000.png)
-```
-Welcome to beecrowd!
+<div align="center">
 
-Your first program in any programming language is usually "Hello World!".
+###### beecrowd | 1000
+### Hello World!
+###### Jean Bez, beecrowd, URI <img src="https://resources.beecrowd.com.br/gallery/images/flags/br.gif" alt="Brazil Flag" /> Brazil
+**Timelimit: 1**
+
+</div>
+
+<p align="center">
+  <img src="https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1000.png"/>
+</p>
+
+
+Welcome to `beecrowd`!
+
+Your first program in any programming language is usually "`Hello World!`".
 In this first problem all you have to do is print this message on the screen.
-```
 
-Input
+
+### Input
 ```
 This problem has no input.
 ```
 
-Output
+### Output
 ```
 You must print the message Hello World! and then the endline as shown below.
 ```
 
-Input sample
+### Input sample
 ```
 
 ```
 
-Output sample
+### Output sample
 ```
 Hello World!
 ```
