--- a/Problems/1189.md
+++ b/Problems/1189.md
@@ -16,18 +16,18 @@ https://www.beecrowd.com.br/judge/en/problems/view/1189
 Read an uppercase character that indicates an operation that will be performed in an array `M[12][12]`. Then, calculate and print the sum or average considering only the numbers that are included in the green area of this array, as shown in the following figure:
 
 <p align="center">
-  <img src="https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1189.png" alt="Green Area of Array" />
+  <img src="https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1189.png"/>
 </p>
 
-## Input
+### Input
 
 The first line of the input contains a single uppercase character `O` (`'S'` or `'M'`), indicating the operation Sum or Average (Média in Portuguese) to be performed with the elements of the array. Following are 144 floating-point numbers of the array.
 
-## Output
+### Output
 
 Print the calculated result (sum or average) with one digit after the decimal point.
 
-## Input Sample
+### Input Sample
 
 ```
 S
@@ -39,7 +39,7 @@ S
 ...
 ```
 
-## Output Sample
+### Output Sample
 
 ```
 122.2
