--- a/Problems/1189.md
+++ b/Problems/1189.md
@@ -13,7 +13,7 @@ https://www.beecrowd.com.br/judge/en/problems/view/1189
 
 </div>
 
-Read an uppercase character that indicates an operation that will be performed in an array `M[12][12]`. Then, calculate and print the sum or average considering only the numbers that are included in the green area of this array, as shown in the following figure:
+Read an uppercase character that indicates an operation that will be performed in an array M[12][12]. Then, calculate and print the sum or average considering only the numbers that are included in the green area of this array, as shown in the following figure:
 
 <p align="center">
   <img src="https://resources.beecrowd.com.br/gallery/images/problems/UOJ_1189.png"/>
@@ -21,7 +21,7 @@ Read an uppercase character that indicates an operation that will be performed i
 
 ### Input
 
-The first line of the input contains a single uppercase character `O` (`'S'` or `'M'`), indicating the operation Sum or Average (Média in Portuguese) to be performed with the elements of the array. Following are 144 floating-point numbers of the array.
+The first line of the input contains a single uppercase character O ('S' or 'M'), indicating the operation Sum or Average (Média in Portuguese) to be performed with the elements of the array. Following are 144 floating-point numbers of the array.
 
 ### Output
 
