--- a/Problems/1000.md
+++ b/Problems/1000.md
@@ -18,9 +18,9 @@ https://www.beecrowd.com.br/judge/en/problems/view/1000
 </p>
 
 
-Welcome to `beecrowd`!
+Welcome to beecrowd!
 
-Your first program in any programming language is usually "`Hello World!`".
+Your first program in any programming language is usually "Hello World!".
 In this first problem all you have to do is print this message on the screen.
 
 
